[package]
name = "discriminant_imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.30", default-features = true }
image = "0.23"
imgui = { version = "0.8.2", features = ["tables-api"] }
imgui-glium-renderer = "0.8.2"
imgui-winit-support = "0.8.2"